# pr-watchdog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: pr.yml  rust.yml
scripts/: binary.sh
src/: config.rs  github.rs  lib.rs  main.rs  watcher.rs
tests/: github_client.rs  user_approved.rs  watcher.rs
