[package]
name = "pr-watchdog"
version = "0.1.0"
edition = "2021"
description = "Watches GitHub repositories and auto-merges or rebases pull requests on a cron schedule."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-cron-scheduler = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
